Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjNumberField.quorum
class Main
    number v = 5.0
    action Main
        Test(v)
    end

    action Test(Integer var)
    end
end
